RESOLVED FIXED 91476
[Qt] REGRESSION(r122768, r122771): They broke jquery/data.html and inspector/elements/edit-dom-actions.html
https://bugs.webkit.org/show_bug.cgi?id=91476
Summary [Qt] REGRESSION(r122768, r122771): They broke jquery/data.html and inspector/...
János Badics
Reported 2012-07-17 02:00:06 PDT
jquery/data.html and inspector/elements/edit-dom-actions.html fails from r122768 or r122771. We couldn't reproduce the fails on local but we suppose that these two tests fail from the same revision that must be http://trac.webkit.org/changeset/122768 or http://trac.webkit.org/changeset/122771 .
Attachments
the patch (3.56 KB, patch)
2012-07-17 15:34 PDT, Filip Pizlo
mhahnenberg: review+
Szilard Ledan
Comment 1 2012-07-17 02:07:57 PDT
I skipped these tests. Please unskip them after the proper fix. http://trac.webkit.org/changeset/122827/trunk/LayoutTests/platform/qt/Skipped
János Badics
Comment 2 2012-07-17 02:39:57 PDT
I'm sorry I forgot to mention the diffs; inspector/elements/edit-dom-actions.html: --- /ramdisk/qt-linux-release/build/layout-test-results/inspector/elements/edit-dom-actions-expected.txt +++ /ramdisk/qt-linux-release/build/layout-test-results/inspector/elements/edit-dom-actions-actual.txt @@ -95,10 +95,37 @@ </div> </div> <div id="node-to-edit-as-html"><span id="span">Text</span></div> -==== after ==== -- <div id="testEditAsHTML"> - - <span foo="bar"> - <span id="inner-span">Span contents</span> - </span> - </div> +Exception while running: function onAllNodesAvailable() { + WebInspector.panels.elements.treeOutline._updateModifiedNodes(); + expand(WebInspector.panels.elements.treeOutline); + callback(); + } +didChange@qrc:/webkit/inspector/treeoutline.js:728 +title@qrc:/webkit/inspector/treeoutline.js:643 +updateTitle@qrc:/webkit/inspector/ElementsTreeOutline.js:1601 +onattach@qrc:/webkit/inspector/ElementsTreeOutline.js:828 +_attach@qrc:/webkit/inspector/treeoutline.js:777 +insertChild@qrc:/webkit/inspector/treeoutline.js:124 +insertChildElement@qrc:/webkit/inspector/ElementsTreeOutline.js:868 +updateChildrenOfNode@qrc:/webkit/inspector/ElementsTreeOutline.js:927 +_updateChildren@qrc:/webkit/inspector/ElementsTreeOutline.js:957 +[native code] +getChildNodes@qrc:/webkit/inspector/DOMAgent.js:275 +updateChildren@qrc:/webkit/inspector/ElementsTreeOutline.js:858 +onpopulate@qrc:/webkit/inspector/ElementsTreeOutline.js:848 +expand@qrc:/webkit/inspector/treeoutline.js:901 +expand +expand +expand +expand +expand +onAllNodesAvailable +result +processChildren +processChildren@[native code] +mycallback@qrc:/webkit/inspector/DOMAgent.js:286 +mycallback@[native code] +dispatch@qrc:/webkit/inspector/InspectorBackend.js:186 +qrc:/webkit/inspector/inspector.js:608 +[native code] jquery/data.html: crash log for DumpRenderTree (pid 2592): STDOUT: <empty> STDERR: 1 0x806509a /ramdisk/qt-linux-release/build/WebKitBuild/Release/bin/DumpRenderTree() [0x806509a] STDERR: 2 0xf774a400 [0xf774a400] STDERR: 3 0xf704ec00 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZNK3JSC6JSCell8toNumberEPNS_9ExecStateE+0x18) [0xf704ec00] STDERR: 4 0xf707ed68 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZNK3JSC7JSValue16toNumberSlowCaseEPNS_9ExecStateE+0x5a) [0xf707ed68] STDERR: 5 0xf69d6991 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0xd24991) [0xf69d6991] STDERR: 6 0xf704c256 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x139a256) [0xf704c256] STDERR: 7 0xf6f81a8a /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x12cfa8a) [0xf6f81a8a] STDERR: 8 0xee856fa7 [0xee856fa7] STDERR: 9 0xf6f3e417 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x128c417) [0xf6f3e417] STDERR: 10 0xf6f38963 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x1286963) [0xf6f38963] STDERR: 11 0xf70201bc /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN3JSC4callEPNS_9ExecStateENS_7JSValueENS_8CallTypeERKNS_8CallDataES2_RKNS_7ArgListE+0x60) [0xf70201bc] STDERR: 12 0xf5f708a6 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x2be8a6) [0xf5f708a6] STDERR: 13 0xf5f71180 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x2bf180) [0xf5f71180] STDERR: 14 0xf645eb68 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x7acb68) [0xf645eb68] STDERR: 15 0xf6547c33 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x895c33) [0xf6547c33] STDERR: 16 0xf6547cef /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0x895cef) [0xf6547cef] STDERR: 17 0xf67367b1 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(+0xa847b1) [0xf67367b1] STDERR: 18 0xf43864e4 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN7QObject5eventEP6QEvent+0x84) [0xf43864e4] STDERR: 19 0xf478fe0c /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(_ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent+0xac) [0xf478fe0c] STDERR: 20 0xf4795cc2 /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(_ZN12QApplication6notifyEP7QObjectP6QEvent+0x162) [0xf4795cc2] STDERR: 21 0xf43731ab /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x7b) [0xf43731ab] STDERR: 22 0xf43a9b87 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1c5b87) [0xf43a9b87] STDERR: 23 0xf43a6b6a /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1c2b6a) [0xf43a6b6a] STDERR: 24 0xf43a6ba4 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1c2ba4) [0xf43a6ba4] STDERR: 25 0xf5711305 /lib/libglib-2.0.so.0(g_main_context_dispatch+0x1d5) [0xf5711305] STDERR: 26 0xf5714fe8 /lib/libglib-2.0.so.0(+0x3efe8) [0xf5714fe8] STDERR: 27 0xf57151c8 /lib/libglib-2.0.so.0(g_main_context_iteration+0x68) [0xf57151c8] STDERR: 28 0xf43a6855 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE+0x65) [0xf43a6855] STDERR: 29 0xf484a775 /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(+0x229775) [0xf484a775] STDERR: 30 0xf4371a69 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN10QEventLoop13processEventsE6QFlagsINS_17ProcessEventsFlagEE+0x49) [0xf4371a69] STDERR: 31 0xf4371f72 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE+0x182) [0xf4371f72]
János Badics
Comment 3 2012-07-17 03:43:33 PDT
It also made ~160 fails on WebKit2. Please have a look at it when it's possible; thank you.
Filip Pizlo
Comment 4 2012-07-17 12:15:23 PDT
Is this 32-bit or 64-bit?
Filip Pizlo
Comment 5 2012-07-17 15:05:05 PDT
The code added by this patch doesn't appear to come into play in jquery/data.html.
Filip Pizlo
Comment 6 2012-07-17 15:21:59 PDT
Oh, actually, I found the bug. Patch on the way shortly.
Filip Pizlo
Comment 7 2012-07-17 15:34:19 PDT
Created attachment 152851 [details] the patch
Mark Hahnenberg
Comment 8 2012-07-17 15:37:57 PDT
Comment on attachment 152851 [details] the patch r=me
Filip Pizlo
Comment 9 2012-07-17 16:11:51 PDT
Note You need to log in before you can comment on or make changes to this bug.